# borg-find

./: README.md  pyproject.toml  shell.nix
borg_find/: __init__.py  borg.py  cli.py  filters.py  model.py  ui.py  utils.py
