[tool.poetry]
name = "borg_find"
version = "0.2.0"
description = "Tool to search files in borg archives"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
borg-find = 'borg_find.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
